# apertium-sat

./: AUTHORS  Makefile.am  README  apertium-sat.pc.in  apertium-sat.sat.acx  apertium-sat.sat.dix  configure.ac  modes.xml
test/: tests.json
